MDEV-10844: EXPLAIN FORMAT=JSON doesn't show order direction for filesort

Currently explain format=json does not show the order direction of fields used during filesort.
This patch would remove this limitation